# mcp-server-with-google-auth

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  drive_web_mcp_server.py  hello.py  main.py  mcp_client.py  pyproject.toml
docs/: auth_flow.puml
